# newswave

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  spin.toml
.sqlx/: query-bd5f8dbbfec56847462179e8af702efae35aab914218c8049201e7f1227fc947.json
config/: base.yaml
migrations/: 20230709090045_create_users_table.sql  20231007063213_create_publish_table.sql
newswave-web/: bun.lockb  package.json  vite.config.ts
newswave-web/src/: 404.tsx  App.tsx  Home.tsx  PublishNewsLetter.tsx  login.tsx
src/: config.rs  email_service.rs  lib.rs  main.rs
src/routes/: global_404.rs  health_check.rs  login.rs  mod.rs  publish.rs  subscriptions.rs  subscriptions_confirm.rs
subscription/: Cargo.toml
subscription/src/: lib.rs
