[package]
name = "newswave"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newswave"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
chrono = { version = "0.4.26", features = ["clock"] }
email_address = "0.2.4"
serde = { version = "1.0.169", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["postgres", "macros", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["trace", "util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "json",
    "registry",
] }
uuid = { version = "1.4.0", features = ["v4"] }
validator = { version = "0.16.1", features = ["derive"] }
