[package]
name = "subscription"
authors = ["Sayan Mallick <snyxmk@gmail.com>"]
description = "handle new subscription to the service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
maud = "0.25.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_urlencoded = "0.7.1"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" }

[workspace]
